# uni-computer-networks

./: .gitignore  2021_2022_proj_auto_avaliacao.xlsx  CMakeLists.txt  Makefile  README.md  clean.sh  compile.sh  main.cpp  server-main.c  tcp-client.c  udp-server.c
client/: CMakeLists.txt  Makefile  centralized_messaging_api.c  centralized_messaging_api.h  centralized_messaging_parsing.h  client_interface.h  command_args_parsing.h  interface.h  main.c  parsing.h
client/centralized_messaging/: commands.c  commands.h  parsing.h
client/src/: Makefile  centralized_messaging_api.h  centralized_messaging_parsing.h  client_interface.h  command_args_parsing.h  commands.c  commands.h  init_args_parsing.h  interface.h  main.c
resources/guide/: gethostname.c  getipaddress.c  udp_receive.c  udp_send.c
resources/lab1/: tcp-server.c  udp-client  udp-client.c  udp-server
server/: CMakeLists.txt  Makefile  command_args_parsing.h  command_handling.h  commands.cpp  commands.h  connection.h  main.c  main.cpp  parsing.h
server/src/: Makefile  command_args_parsing.h  command_handling.h  connection.h  main  main.c  operations.c  operations.h  tcp_handling.h  udp_handling.h
server/state/: operations.c  operations.cpp  operations.h  parsing.h
tests/: test1.out  test1.txt  test2.txt
